# avis

./: README.md
branches/client/c/release_1.0/c/: Makefile.am
branches/client/c/release_1.0/c/src/examples/: Makefile.am
branches/client/c/release_1.0/c/src/include/avis/: elvin.h
branches/client/c/release_1.0/c/src/lib/: attributes.c  byte_buffer.c  errors.c  log.c  messages.h  values.c
c/: Makefile.am  README.txt  avis-client.properties  configure.ac
c/doc/: doxygen.config  history.txt  notes.txt
c/release_0.1.0/: .project  Makefile.am
c/release_0.1.0/doc/: notes.txt
c/release_0.1.0/src/include/avis/: errors.h  values.h
c/release_0.1.0/src/lib/: elvin.c  errors.c  log.h  messages.h
c/release_1.0.0/c/: configure.ac
c/release_1.0.0/c/doc/: history.txt
c/release_1.0.0/c/doc/api/: doxygen.config
c/release_1.0.0/c/src/lib/: errors_private.h  messages.c
c/release_1.0.0/c/src/test/: check_client.c
c/release_1.0.0/java/common/doc/: notes.txt
c/release_1.0.0/java/common/src/main/org/avis/io/messages/: ConfConn.java  ConnRqst.java  SubModRqst.java  SyntheticMessage.java
c/release_1.0.0/java/common/src/test/org/avis/io/: JUTestRequestTrackingFilter.java
c/release_1.0.0/java/server/src/main/org/avis/router/: Router.java
c/release_1.0.0/java/server/src/main/org/avis/subscription/ast/nodes/: Xor.java
c/release_1.0.0/java/server/src/test/org/avis/federation/: Predicate.java  untrusted.ks
c/release_1.0.0/java/server/src/test/org/avis/router/: AgentClient.java
c/release_1.0.0/java/server/src/test/org/avis/subscription/parser/: JUTestParser.java
c/release_1.0.0/web/site/: .htaccess
c/release_1.0.0/web/site/client-library/c/examples/: hello_world.c.html
c/release_1.0.0/web/src/: downloads.txt
c/release_1.0/c/: avis-client.properties
c/release_1.0/c/doc/: notes.txt
c/release_1.0/c/src/include/avis/: values.h
c/release_1.0/c/src/lib/: Makefile.am  arrays.c  net.c
c/release_1.0/c/src/test/: check_messages.c
c/release_1.0/java/client/: build.xml
c/release_1.0/java/client/doc/: history.txt
c/release_1.0/java/client/src/test/org/avis/client/: TestNtfnListener.java
c/release_1.0/java/common/src/main/org/avis/io/: ClientFrameCodec.java  Net.java  RequestTrackingFilter.java
c/release_1.0/java/common/src/main/org/avis/io/messages/: Notify.java  NotifyDeliver.java
c/release_1.0/java/common/src/main/org/avis/security/: DualKeyScheme.java  Key.java
c/release_1.0/java/common/src/test/org/avis/io/: JUTestLivenessFilter.java
c/release_1.0/java/common/src/test/org/avis/security/: JUTestKeys.java
c/release_1.0/java/server/doc/: benchmarks.txt
c/release_1.0/java/server/misc/federation_config/: slave.cer
c/release_1.0/java/server/src/main/org/avis/federation/io/: XdrAstParser.java
c/release_1.0/java/server/src/main/org/avis/subscription/parser/: ConstantExpressionException.java  SubscriptionParser.jj
c/release_1.0/java/server/src/test/org/avis/federation/: JUTestFederationIntegration.java  JUTestFederationManager.java  JUTestFederationTLS.java
c/release_1.0/java/server/src/test/org/avis/router/: MemoryLeak.java
c/release_1.1/doc/: history.txt
c/release_1.1/doc/api/: Makefile.am
c/release_1.1/src/examples/: secure_receiver.c
c/release_1.1/src/include/avis/: defs.h  elvin.h  keys.h
c/release_1.1/src/lib/: arrays.c  byte_buffer.c  elvin_uri.c  errors.c  net.c
c/release_1.2/: avis-client.properties
c/release_1.2/doc/: history.txt
c/release_1.2/src/lib/: arrays.c  attributes.c  elvin.c  keys.c
c/src/: Makefile.am
c/src/examples/: Makefile.am  ec.c  hello_world.c  secure_sender.c
c/src/include/avis/: array_list.h  attributes.h  defs.h  elvin.h  elvin_uri.h  errors.h  keys.h  log.h  net.h  stdtypes.h  values.h
c/src/include/elvin/: array_list.h  attributes.h  elvin.h  elvin_uri.h  errors.h  keys.h  named_values.h  stdtypes.h  values.h
c/src/lib/: Makefile.am  Makefile.in  array_list.c  array_list.h  array_list_private.h  arrays.c  arrays_private.h  attributes.c  avis_endian.h  byte_buffer.c  byte_buffer.h  elvin.c  elvin_uri.c  endian.h  errors.c  errors_private.h  keys.c  keys_private.h  listeners.c  listeners.h  log.c  messages.c  messages.h  named_values.c  named_values_private.h  net.c  sha1.c  values.c
c/src/test/: Makefile.am  Makefile.in  basic_test.c  check_array_list.c  check_client.c  check_collections.c  check_ext.c  check_ext.h  check_invoke.c  check_messages.c  check_security.c  check_uri.c  event_loop_test.c  tests.c
client/: .classpath  avis-client.properties  build.xml
common/: .classpath  build-common.xml  build.xml
cxx/: .cproject  .project
cxx_client/: configure.ac
pre_reorg/: LICENSE.txt  build.xml
release_0.5/: .fbwarnings
server/: .classpath  build.xml
tinkle/: Info.plist  Makefile  copy_avis_framework
tinkle_iphone/: Tinkle-Info.plist  copy_avis  main.m
trunk/: .classpath  README.txt  avis.properties  (+1 more)
trunk/c/: .cproject  .project  Makefile.am  Makefile.in  README.txt  avis-client.properties  config.h.in  configure  configure.ac
trunk/c/doc/: history.txt  notes.txt
trunk/c/doc/api/: Makefile.am
trunk/c/src/: Makefile.in
trunk/c/src/examples/: Makefile.am  hello_world.c  secure_sender.c
trunk/c/src/include/avis/: arrays.h  attributes.h  defs.h  elvin.h  elvin_uri.h  errors.h  keys.h  log.h  net.h  stdtypes.h  values.h
trunk/c/src/include/elvin/: array_list.h  elvin.h  elvin_uri.h  errors.h  keys.h  log.h  named_values.h  stdtypes.h  values.h
trunk/c/src/lib/: Makefile.am  Makefile.in  array_list.c  array_list_private.h  arrays.c  arrays_private.h  attributes.c  attributes_private.h  avis_endian.h  byte_buffer.c  byte_buffer.h  elvin.c  elvin_uri.c  errors.c  errors_private.h  keys.c  keys_private.h  listeners.c  log.c  messages.c  messages.h  named_values.c  net.c  sha1.c  values.c  values_private.h
trunk/c/src/test/: Makefile.am  Makefile.in  basic_test.c  check_array_list.c  check_client.c  check_collections.c  check_ext.h  check_invoke.c  check_messages.c  check_security.c  check_uri.c  event_loop_test.c  tests.c
trunk/cxx/: .cproject  configure.ac
(+2548 files in other folders)
